--- a/detailing-fe/src/models/AllServices.css
+++ b/detailing-fe/src/models/AllServices.css
@@ -121,3 +121,10 @@ body {
   padding: 0;
   background-color: black;
 }
+.service-image2 {
+  width: 100%;
+  height: 210px;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+  /*height: 470px;*/
+}
