--- a/detailing-fe/src/pages/OnboardingForm.css
+++ b/detailing-fe/src/pages/OnboardingForm.css
@@ -1,6 +1,6 @@
 /* General Form Styling */
 form {
-  max-width: 400px;
+  /*max-width: 400px;*/
   margin: 50px auto;
   padding: 20px;
   border: 1px solid #ccc;
