updated with main

--- a/detailing-fe/src/models/AllAppointments.css
+++ b/detailing-fe/src/models/AllAppointments.css
@@ -14,9 +14,7 @@
   border-radius: 8px;
   background-color: #fff;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  transition:
-    transform 0.3s ease,
-    box-shadow 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   gap: 20px;
 }
 
@@ -52,8 +50,8 @@
 
 .button-container {
   display: flex;
-  flex-direction: row; /* Place buttons side by side */
-  gap: 10px; /* Space between the buttons */
+  flex-direction: row;
+  gap: 10px;
   margin-top: 10px;
 }
 
@@ -67,9 +65,7 @@
   font-weight: bold;
   cursor: pointer;
   align-self: flex-start;
-  transition:
-    background-color 0.3s ease,
-    transform 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .appointment-details button:hover {
@@ -81,6 +77,7 @@ button:disabled {
   background-color: #ccc;
   cursor: not-allowed;
 }
+
 select {
   width: 30%;
   padding: 10px 15px;
@@ -89,9 +86,7 @@ select {
   background-color: #fff;
   color: #333;
   font-size: 14px;
-  transition:
-    border-color 0.3s ease,
-    box-shadow 0.3s ease;
+  transition: border-color 0.3s ease, box-shadow 0.3s ease;
   outline: none;
 }
 
@@ -121,12 +116,13 @@ label {
   margin-bottom: 8px;
   display: block;
 }
-.delete-button {
+
+/* Renamed delete button styles to remove-appointment-button */
+.remove-appointment-button {
   background-color: red;
   color: white;
   border: none;
   padding: 8px 12px;
-  margin-top: 10px;
   font-size: 14px;
   font-weight: bold;
   border-radius: 5px;
@@ -134,9 +130,10 @@ label {
   transition: background-color 0.3s ease;
 }
 
-.delete-button:hover {
+.remove-appointment-button:hover {
   background-color: darkred;
 }
+
 .modal {
   position: fixed;
   top: 50%;
