--- a/detailing-fe/src/nav/NavBar.css
+++ b/detailing-fe/src/nav/NavBar.css
@@ -51,7 +51,9 @@
   font-size: 1rem;
   text-transform: uppercase;
   padding: 0.5rem 1rem;
-  transition: color 0.3s ease, background-color 0.3s ease;
+  transition:
+    color 0.3s ease,
+    background-color 0.3s ease;
 }
 
 .desktop-nav li a:hover {
@@ -147,7 +149,10 @@
   border: 2px solid #ac53f5;
   background-color: transparent;
   color: #ac53f5;
-  transition: background 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    background 0.3s ease,
+    color 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .btn-signin:hover {
